Fix heroSideNote jumping on slide change by using align-items center

--- a/src/pages/Home.module.css
+++ b/src/pages/Home.module.css
@@ -54,7 +54,7 @@
 .heroInner {
   display: grid;
   grid-template-columns: minmax(0, 720px) minmax(168px, 240px);
-  align-items: end;
+  align-items: center;
   gap: var(--sp-7);
 }
 
@@ -103,7 +103,6 @@
   display: grid;
   gap: var(--sp-2);
   justify-items: end;
-  padding-bottom: var(--sp-5);
   color: rgba(255, 255, 255, 0.70);
   text-align: right;
   min-width: 0;
